components/kcp/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: control-plane-service
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: kcp
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elkcp
  namespace: klape-insights
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-kcp
    weight: null
status: {}
